ui bugs alignment on website

--- a/app/assets/stylesheets/application/footer.scss
+++ b/app/assets/stylesheets/application/footer.scss
@@ -89,7 +89,7 @@ footer{
         float: left;
         margin-right: 10px;
         a{
-          color: #920000;
+          color: #670606;
           font-size: 14px;
         }
       }
