--- a/app/assets/stylesheets/application/header.scss
+++ b/app/assets/stylesheets/application/header.scss
@@ -7,7 +7,7 @@ a:focus{
 #header{
   width:100%;
   background: #f9f3e6;
-  z-index: 2;
+  z-index: 50;
   .logo-main-con{
 
   }
